test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/undeclared_global_variable.plx
pub fn main(none) i32 {
    return x
}

#  you must declare a file-scope variable before using it 
pub x: i32 = 0

